--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
     "name": "music-server",
     "version": "1.0.0",
     "description": "music app server",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js",
-        "dev": "node --watch index.js"
+        "start": "nodemon server.js"
     },
     "repository": {
         "type": "git",
@@ -24,6 +23,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.8.0"
+        "mongoose": "^6.8.0",
+        "nodemon": "^2.0.20"
     }
 }
